--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -5,6 +5,9 @@ eureka:
  hostname: localhost
  ip-address: 127.0.0.1
  preferIpAddress: true
- client:
+client:
  registerWithEureka: true
+ fetchRegistry: true
+ serviceUrl:
+   defaultZone: http://localhost:8070/eureka/
 
